fix: about image height and text align

--- a/assets/scss/about.scss
+++ b/assets/scss/about.scss
@@ -11,7 +11,7 @@
     .about__image {
       object-fit: cover;
       max-width: 32vw;
-      max-height: 340px;
+      // max-height: 340px;
       // padding: $space-md;
     }
   }
@@ -21,7 +21,7 @@
   justify-content: center;
   padding-left: $space-2xl;
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
 
   h1 {
     text-align: center;
